--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,11 @@ body {
     padding: 30px;
     box-shadow: 0 0 10px #000;
     border-radius: 10px;
+
 }
 
 form input {
-    width: 100%;
+    width: 200px;
     padding: 5px;
     border-radius: 5px;
     border: 0;
@@ -60,4 +61,10 @@ form button {
 
 .success {
     border-color: green;
+}
+
+@media screen and (max-width:880px) {
+    #container {
+        width: 100%;
+    }
 }
